--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Logging": {
-    "LogLevel": {
+    "LogLevel1": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
